Fixed Horizontal Scroll Issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@
 
 
 /* 2. Navgation Styles */
-
+.nav-link {
+    text-align: center;
+}
 
 
 /* 3. Heading Styles */
@@ -23,15 +25,12 @@
 html, body{
     margin: 0;
     padding: 0;
-}
-html {
     overflow-x: hidden;
 }
 
 form {
-    margin: 0 0 5% 1%;
+    margin: 0 0 5% 0%;
 }
-
 
 .industries {
     margin: 0 0 0 25%;
@@ -49,8 +48,5 @@ footer {
 
 /* 6. Media Queries */
 
-@media screen and (min-width: 1260px) {
-    form {
-        margin: 0 0 5% 0
-    }
+@media screen and (min-width: 1200px) {
 }
